2004-12-20  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/bmp.c (WriteBMPImage): Handle the case where the image
	has an over-sized colormap.  Was writing on unallocated heap memory.
	* coders/dib.c (WriteDIBImage): Handle the case where the image
	has an over-sized colormap.  Was writing on unallocated heap memory.

2004-12-19  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/gem.c (Modulate): Hue argument now represents a rotation
	from -180 degrees to +180 degrees expressed as an argument of 0 to
	2.0 (1.0 for no change). Note that this change also effects the
	-modulate argument and the Magick++ modulate method(). This change
	is made because the previous hue adjustment strategy only
	succeeded in corrupting the image.

2004-12-04  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.c (opendir): Ensure that data may not overwrite
	the stack.
	(readdir): Ensure that data may not overwrite the stack.
	* magick/blob.c (ImageToBlob): Ensure that image->logging is
	set prior to encoding image.
	* magick/constitute.c (WriteImage): Ensure that image->logging is
	set prior to encoding image.

2004-11-30  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* rungm.sh.in: Compute final variable definitions from within
	configure in order to improve MinGW test execution times.

2004-11-15  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/gif.c: Fix two error-path memory leaks which were noticed
	by Glenn Randers-Pehrson.

2004-11-10  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* coders/png.c (UnregisterPNGImage): Eliminate Warning: module
	registration for "JNG" from module "PNG" still present!

2004-11-08  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/constitute.c (DispatchImage): Fix documentation error
	regarding return status.

2004-11-07  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>

	* magick/nt_base.h: Only define HAVE_GLOBALMEMORYSTATUSEX for MSVC
	7.0 and later.
