@@ -1,51 +1,23 @@
 
 Items large and small which remain to be worked on.
+See website for "wish list".
 --------------------------------------------------------------------
 
-Immediate Bugs
+For 1.2 Branch
 ==============
 
- o SegmentImage is producing black images in some cases.
+  o Use non-recursive build for Unix (done).
 
-For Next Release
-===============
+  o Update to libtool 2.0 (partially done in sandbox).
 
- o Fix -process parsing so '-process analyze' works.
- o Fix retrieving specified frames from an MPEG file.
- o Update Windows libtiff to version 3.6.1.
- o Fix broken web page links.
+  o Convert to using safe string copy and append (done).
 
-For Future Release
-==================
+  o Re-write metadata handling to use accessor functions rather
+    than accessing Image members directly (50% complete).
 
-Library
+  o Re-write pixel export/import functions (done)
 
-  * Implement API support to compose and interpret IPTC records.
+  o Optimize lcms interface (0% complete).
 
-  * Implement gradient fills for MVG and SVG.
+  o Update Windows libtiff to version 3.7.X.
 
-  * Implement image filters for MVG and SVG.
-
-  * Implement support for accessing pluggable vector graphics back-ends
-    via the draw.h APIs.
-
-Coders
-
-  * Support reading and writing the CALS raster format (military
-    standard MIL-PRF-28002C).
-
-  * Support reading single-page Encapsulated Postscript, Postscript, and
-    Portable Document Format into native (MVG) vector form (ala pstoedit).
-
-  * Support writing valid SVG files.
-
-  * Support writing vector EPS files.
-
-  * Support writing vector PDF files.
-
-  * Support writing vector and bitmap CGM files.
-
-  * Support reading and writing Windows Extended Metafont (EMF) files.
-
-  * Support reading images from the TWAIN scanner interface under
-    Windows and MAC.
