@@ -10,5 +10,5 @@
 
 #define public MagickPackageName "GraphicsMagick"
 #define public MagickPackageVersion "1.2"
-#define public MagickPackageVersionAddendum ".020041219"
+#define public MagickPackageVersionAddendum ".020041220"
 #define public MagickPackageReleaseDate "unreleased"
