@@ -21,6 +21,23 @@
 </tr>
 </table>
 <p>
+2004-12-21  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> TODO.txt: Organized todo list for 1.2 release.
+
+</UL>
+<p>
+2004-12-20  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
+
+<UL>
+  <LI> coders/bmp.c (WriteBMPImage): Handle the case where the image
+        has an over-sized colormap.  Was writing on unallocated heap memory.
+  <LI> coders/dib.c (WriteDIBImage): Handle the case where the image
+        has an over-sized colormap.  Was writing on unallocated heap memory.
+
+</UL>
+<p>
 2004-12-19  Bob Friesenhahn  &lt;bfriesen@simple.dallas.tx.us&gt;
 
 <UL>
